test/tests/errors/error-procedure-incorrect-param3.sm
// true
// false
// false
/**/
/**/

program {
    proc x(a: int, b: int, c: int) {
        output "t";
    }

    x(1, 2, 3, 4);
}